Fix - Removed truncatechars match 49

--- a/home/static/home/css/golden_route.css
+++ b/home/static/home/css/golden_route.css
@@ -286,6 +286,7 @@ p {
     vertical-align: middle;
     display: inline-block;
     width: 20%;
+    object-fit: contain;
 } 
 
 .knockout-team-container p {
